--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -36,7 +36,7 @@ body {
 	background-size: cover;
 	width:100%;
     height:50vh;
-    min-width:500px;
+    /* min-width:500px; */
 	min-height:350px;
     margin:0;
     padding:0;
