--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -250,11 +250,12 @@ nav img {
 	text-align: right;
 	/* margin-right:10px; */
 	display:inline-block;
-	position:fixed;
+	position:absolute;
 	right:0;
-	list-style:none;
-	cursor:default;
+	/* list-style:none; */
+	/* cursor:default; */
     padding-top:18px;
+    /* top: -80px; */
 }
 
 
