--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,7 @@
+---
+---
+$baseurl: "{{ site.baseurl }}";
+
 body {
 	font-family:'Arial', 'sans-serif';
         /* overflow:hidden;     */
@@ -16,7 +20,7 @@ body {
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
     ),
-    url("../images/background.jpg") no-repeat center;
+    url($baseurl + "images/background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:120vh;
@@ -32,7 +36,7 @@ body {
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
     ),
-    url("../images/background.jpg") no-repeat center;
+    url($baseurl + "images/background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:50vh;
