--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -19,7 +19,7 @@
 </div>
 
 <nav>
-    <a href="/"><img src="{{ site.baseurl }}images/fivestarlogobefore.svg" height="60px"></a>
+    <a href="/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></a>
 
     <ul>
 
@@ -56,7 +56,7 @@
 </nav>
 
 <div class="newNav">
-    <a href="/"><img src="{{ site.baseurl }}images/fivestarlogo.svg" height="60px"></a>
+    <a href="/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60px"></a>
     <ul>
 
         <div class="proto">
