--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,9 +18,9 @@
 	    crossorigin="anonymous">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	    crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/hover.css">
-	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/styles.css">
-	<link rel="icon" href="{{ site.baseurl }}images/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
+	<link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
 	{% include analytics.html %}
 </head>
 
