--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@ body {
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
     ),
-    url($baseurl + "images/background.jpg") no-repeat center;
+    url($baseurl + "/images/background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:120vh;
@@ -36,7 +36,7 @@ body {
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
     ),
-    url($baseurl + "images/background.jpg") no-repeat center;
+    url($baseurl + "/images/background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:50vh;
