--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,44 +1,44 @@
 <div class="menu">
 
     <ul>
-        <li><a href="/" class="hvr-underline-from-left">About</a></li>
-        <li><a href="/services" class="hvr-underline-from-left">Services</a>
+        <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
+        <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
             <ul>
-                <li><a href="/" class="hvr-underline-from-left">Websites</a></li>
-                <li><a href="/" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design" class="hvr-underline-from-left">Websites</a></li>
+                <li><a href="{{ site.baseurl }}/search-engine-optimization" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/digital-marketing" class="hvr-underline-from-left">Digital Marketing</a></li>
                 <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
             </ul>
         </li>
 
-        <li><a href="/blog" class="hvr-underline-from-left">Blog</a></li>
-        <li><a href="/contact" class="hvr-underline-from-left">Contact</a></li>
+        <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
+        <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
 
 <nav>
-    <a href="/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></a>
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogobefore.svg" height="60px"></a>
 
     <ul>
 
         <div class="proto">
 
-            <li><a href="/" class="hvr-underline-from-left">About</a></li>
-            <li><a href="/services" class="hvr-underline-from-left">Services</a>
+            <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
                 <ul>
-                    <li><a href="/" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="/" class="hvr-underline-from-left">SEO</a></li>
-                    <li><a href="/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                    <li><a href="{{ site.baseurl }}/website-design" class="hvr-underline-from-left">Websites</a></li>
+                    <li><a href="{{ site.baseurl }}/search-engine-optimization" class="hvr-underline-from-left">SEO</a></li>
+                    <li><a href="{{ site.baseurl }}/digital-marketing" class="hvr-underline-from-left">Digital Marketing</a></li>
                     <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
                 </ul>
             </li>
 
-            <li><a href="/blog" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="/contact" class="hvr-underline-from-left">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
 
@@ -56,16 +56,16 @@
 </nav>
 
 <div class="newNav">
-    <a href="/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60px"></a>
+    <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60px"></a>
     <ul>
 
         <div class="proto">
-            <li><a href="/" class="hvr-underline-from-left">About</a></li>
-            <li><a href="/services" class="hvr-underline-from-left">Services</a>
+            <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
                 <ul>
-                    <li><a href="/" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="/" class="hvr-underline-from-left">SEO</a></li>
-                    <li><a href="/" class="hvr-underline-from-left">Digital Marketing</a></li>
+                    <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
+                    <li><a href="{{ site.baseurl }}/search-engine-optimization/" class="hvr-underline-from-left">SEO</a></li>
+                    <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
                     <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                             <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
                             <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
@@ -73,8 +73,8 @@
 
             </li>
 
-            <li><a href="/blog" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="/contact" class="hvr-underline-from-left">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
 
