--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,12 +15,12 @@ body {
     /* background-color:black; */
 }
 
-.homePage {
+.homeBackground {
     background:linear-gradient(
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
     ),
-    url($baseurl + "/images/background.jpg") no-repeat center;
+    url($baseurl + "/images/home-background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:120vh;
@@ -31,15 +31,15 @@ body {
     /* position:relative; */
 }
 
-.websitePage {
+.websiteDesignBackground {
     background:linear-gradient(
-      rgba(0, 0, 0, 0.1), 
-      rgba(0, 0, 0, 0.1)
+      rgba(0, 0, 0, 0.5), 
+      rgba(0, 0, 0, 0.5)
     ),
-    url($baseurl + "/images/background.jpg") no-repeat center;
+    url($baseurl + "/images/website-design-background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
-    height:50vh;
+    height:80vh;
     /* min-width:500px; */
 	min-height:350px;
     margin:0;
