--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,17 +4,17 @@
         <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
         <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
             <ul>
-                <li><a href="{{ site.baseurl }}/website-design" class="hvr-underline-from-left">Websites</a></li>
-                <li><a href="{{ site.baseurl }}/search-engine-optimization" class="hvr-underline-from-left">SEO</a></li>
-                <li><a href="{{ site.baseurl }}/digital-marketing" class="hvr-underline-from-left">Digital Marketing</a></li>
+                <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
+                <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
+                <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
                 <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
             </ul>
         </li>
 
-        <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
-        <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
+        <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+        <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
 
@@ -25,20 +25,20 @@
 
         <div class="proto">
 
-            <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
-            <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
+            <li><a href="{{ site.baseurl }}/about/" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
                 <ul>
-                    <li><a href="{{ site.baseurl }}/website-design" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="{{ site.baseurl }}/search-engine-optimization" class="hvr-underline-from-left">SEO</a></li>
-                    <li><a href="{{ site.baseurl }}/digital-marketing" class="hvr-underline-from-left">Digital Marketing</a></li>
+                    <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
+                    <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
+                    <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
                     <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
                 <li><a href="/" class="hvr-underline-from-left">E-Commerce</a></li> -->
                 </ul>
             </li>
 
-            <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
 
@@ -60,11 +60,11 @@
     <ul>
 
         <div class="proto">
-            <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
-            <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
+            <li><a href="{{ site.baseurl }}/about/" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
                 <ul>
                     <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
-                    <li><a href="{{ site.baseurl }}/search-engine-optimization/" class="hvr-underline-from-left">SEO</a></li>
+                    <li><a href="{{ site.baseurl }}/seo/" class="hvr-underline-from-left">SEO</a></li>
                     <li><a href="{{ site.baseurl }}/digital-marketing/" class="hvr-underline-from-left">Digital Marketing</a></li>
                     <!-- <li><a href="/" class="hvr-underline-from-left">Logo Design</a></li>
                             <li><a href="/" class="hvr-underline-from-left">Graphics Design</a></li>
@@ -73,8 +73,8 @@
 
             </li>
 
-            <li><a href="{{ site.baseurl }}/blog" class="hvr-underline-from-left">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/contact" class="hvr-underline-from-left">Contact</a></li>
+            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
 
