--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,13 +9,13 @@ body {
     right:0;
     margin:0;
     /* z-index: 10000; */
-
+    color: #686666;
     /* min-width:576px; */
     /* max-width:1600px; */
     /* background-color:black; */
 }
 
-.homeBackground {
+.home-background {
     background:linear-gradient(
       rgba(0, 0, 0, 0.1), 
       rgba(0, 0, 0, 0.1)
@@ -31,12 +31,45 @@ body {
     /* position:relative; */
 }
 
-.websiteDesignBackground {
+.website-design-background {
     background:linear-gradient(
-      rgba(0, 0, 0, 0.5), 
-      rgba(0, 0, 0, 0.5)
+      rgba(0, 0, 0, 0.3), 
+      rgba(0, 0, 0, 0.3)
     ),
     url($baseurl + "/images/website-design-background.jpg") no-repeat center;
+	background-size: cover;
+	width:100%;
+    height:80vh;
+    /* min-width:500px; */
+	min-height:350px;
+    margin:0;
+    padding:0;
+    position:relative;
+}
+
+.seo-background {
+    background:linear-gradient(
+      rgba(0, 0, 0, 0.3), 
+      rgba(0, 0, 0, 0.3)
+    ),
+    url($baseurl + "/images/seo-background.jpg") no-repeat center;
+    // url($baseurl + "/images/seo-background2.jpg") no-repeat center;
+    background-size: cover;
+	width:100%;
+    height:80vh;
+    /* min-width:500px; */
+	min-height:350px;
+    margin:0;
+    padding:0;
+    position:relative;
+}
+
+.digital-marketing-background {
+    background:linear-gradient(
+      rgba(0, 0, 0, 0.3), 
+      rgba(0, 0, 0, 0.3)
+    ),
+    url($baseurl + "/images/digital-marketing-background.jpg") no-repeat center;
 	background-size: cover;
 	width:100%;
     height:80vh;
@@ -72,16 +105,23 @@ body {
 .banner {
   background: #4286f4;
   /* background: #0F52BA; */
-    padding:40px 100px;
+    // padding:40px 100px;
+    padding: 2vw 3.65vw;
+
     /* position:absolute;
     bottom:0; */
     text-align: center;
     color:white;
 }
 
-.serviceHeading {
+.bannerText {
+    // font-size: 2vw;
+    font-size:5vw;
+    margin:0;
+}
 
-    padding:40px 100px 0 100px;
+.serviceHeading {
+    padding:40px 70px 0 70px;
     text-align: center;
 }
 
@@ -120,6 +160,31 @@ body {
 .toUpper {
     text-transform: uppercase;
     font-weight:bold;
+    padding-bottom:8px;
+}
+
+.bolder {
+    padding-top:8px;
+    font-weight: bold;
+    color: #656666;
+    text-decoration: underline;
+}
+
+.bolder:hover {
+    color: #656666;
+    text-decoration:none;
+}
+
+
+
+.nostyle {
+    color: #656666;
+    text-decoration:none;
+}
+
+.nostyle:hover {
+    color: #656666;
+    text-decoration:none;
 }
 
 #map {
