--- a/css/styles.scss
+++ b/css/styles.scss
@@ -106,7 +106,7 @@ body {
   background: #4286f4;
   /* background: #0F52BA; */
     // padding:40px 100px;
-    padding: 3.65vw 3.65vw;
+    padding: 3.65vw;
 
     /* position:absolute;
     bottom:0; */
@@ -121,7 +121,7 @@ body {
 }
 
 .serviceHeading {
-    padding:40px 70px 0 70px;
+    padding: 3.65vw;
     text-align: center;
 }
 
