--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	<h1 class="toUpper">Need help? Feel free to contact us at 416-464-6573</h1>
 </div>
 
-<div class="container-fluid">
+<div class="body-container">
 	<div class="row locations">
 		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
 			<p>Brampton Main Office</p>
