--- a/css/styles.scss
+++ b/css/styles.scss
@@ -103,20 +103,45 @@ body {
 
 
 .banner {
-  background: #4286f4;
+
   /* background: #0F52BA; */
     // padding:40px 100px;
-    padding: 3.65vw;
+
 
     /* position:absolute;
     bottom:0; */
+    background: #4286f4;
     text-align: center;
     color:white;
+    padding: 3.65vw;
 }
 
-.bannerText {
+h1 {
+    font-size:7.5vw;
+    margin:5vw;
+    // line-height: 7.5vw;
+
+}
+
+h2 {
     // font-size: 2vw;
+
     font-size:5vw;
+    margin:0;
+    line-height: 7.5vw;
+}
+
+h3 {
+    font-size:5vw;
+    margin:0;
+    line-height: 7.5vw;
+
+
+}
+
+
+.row {
+    padding:0;
     margin:0;
 }
 
@@ -129,23 +154,26 @@ body {
     display:flex;
     flex-direction:row;
     justify-content: flex-start;
-    padding:20px;
-    padding-top:40px;
+    padding: 6.15vw 3.65vw;
+    // margin:2.5vw 0;
+    // padding-top:40px;
 }
 
 .circular--square {
- 
-  border-radius: 50%;
+   border-radius: 50%;
     /* border: 4px solid #4286f4; */
 }
 
-
+.serviceIcon {
+    width:30vw;
+    // background-color: red;
+}
 
 .serviceIcon img {
     display: block;
     margin: 0 auto;
     height: auto;
-    width: 100%;
+    // width: 100vw;
 }
 
 
@@ -154,20 +182,37 @@ body {
 
 
 .serviceText {
-    padding:0 0 0 20px;
+    // padding:0 0 0 20px;
+    width:70vw;
+    // background-color:green;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+    // height:100%;
+    padding-left:5vw;
+}
+
+.serviceText p {
+    font-size: 3.5vw;
 }
 
 .toUpper {
     text-transform: uppercase;
     font-weight:bold;
-    padding-bottom:8px;
+    // padding-bottom:0.5vw;
+
 }
 
-.bolder {
-    padding-top:8px;
+.serviceText  {
+    // margin-top:0;
+}
+
+.serviceText .bolder {
+    // padding-top:8px;
     font-weight: bold;
     color: #656666;
     text-decoration: underline;
+    margin-bottom:0;
 }
 
 .bolder:hover {
@@ -464,7 +509,7 @@ cursor:default;
 
 
 
-.locations {
+.serviceText, .locations {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -474,7 +519,7 @@ cursor:default;
     flex-wrap: wrap;
 }
 
-.locations > [class*='col-'] {
+.serviceText, .locations > [class*='col-'] {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -542,9 +587,10 @@ cursor:default;
     width:100%;
 }
 
-.container-fluid {
+.body-container {
     padding-bottom:40px;
     background:white;
+    margin:0;
 }
 
 
