--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <div id="map"></div>
 
-<div class="moreHelp">
-	<h1 class="toUpper">Need help? Feel free to contact us at 416-464-6573</h1>
+<div class="banner">
+	<h2>Need help? Feel free to contact us at 416-464-6573</h2>
 </div>
 
 <div class="body-container">
-	<div class="row locations">
+	<div class="row eqHeight">
 		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
 			<p>Brampton Main Office</p>
 
