--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="map"></div>
 
 <div class="banner">
-	<h2>Need help? Feel free to contact us at 416-464-6573</h2>
+	<h1>Need help? Feel free to contact us at <span style="white-space: nowrap;">416-464-6573</span></h1>
 </div>
 
 <div class="body-container">
