--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="map"></div>
 
-<div class="banner">
-	<h1>Need help? Feel free to contact us at <span style="white-space: nowrap;">416-464-6573</span></h1>
+<div class="bannerBottom">
+	<h1 class="toUpper bold">Need help? Feel free to contact us at <span style="white-space: nowrap;">416-464-6573</span></h1>
 </div>
 
 <div class="body-container">
