--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,7 @@
 	</div>
 </div>
 
-<div class="footerBanner">
+<!-- <div class="footerBanner">
 	<div class="footerImage">
 		<img src="{{ site.baseurl }}/images/company1.jpg">
 	</div>
@@ -89,7 +89,7 @@
 	<div class="footerImage">
 		<img src="{{ site.baseurl }}/images/company9.jpg">
 	</div>
-</div>
+</div> -->
 
 <script src="{{ site.baseurl }}/js/scripts.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyBADGObWqRT173c7GYHmDc0BpJ4zECy1_A&callback=initMap">
