--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,7 +1,7 @@
 <div class="menu">
 
     <ul>
-        <li><a href="{{ site.baseurl }}/about" class="hvr-underline-from-left">About</a></li>
+        <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
         <li><a href="{{ site.baseurl }}/services" class="hvr-underline-from-left">Services</a>
             <ul>
                 <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
@@ -13,7 +13,7 @@
             </ul>
         </li>
 
-        <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+        <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
         <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
     </ul>
 </div>
@@ -25,7 +25,7 @@
 
         <div class="proto">
 
-            <li><a href="{{ site.baseurl }}/about/" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
             <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
                 <ul>
                     <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
@@ -37,7 +37,7 @@
                 </ul>
             </li>
 
-            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+            <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
@@ -60,7 +60,7 @@
     <ul>
 
         <div class="proto">
-            <li><a href="{{ site.baseurl }}/about/" class="hvr-underline-from-left">About</a></li>
+            <li><a href="{{ site.baseurl }}/" class="hvr-underline-from-left">Home</a></li>
             <li><a href="{{ site.baseurl }}/services/" class="hvr-underline-from-left">Services</a>
                 <ul>
                     <li><a href="{{ site.baseurl }}/website-design/" class="hvr-underline-from-left">Websites</a></li>
@@ -73,7 +73,7 @@
 
             </li>
 
-            <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li>
+            <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
             <li><a class="hvr-underline-from-none">416-464-6573</a></li>
         </div>
