--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,47 @@
 <div id="map"></div>
 
-<div class="bannerBottom">
-	<h1 class="toUpper bold">Need help? Feel free to contact us at <span style="white-space: nowrap;">416-464-6573</span></h1>
-</div>
+
 
 <div class="body-container">
-	<div class="row eqHeight">
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
-			<p>Brampton Main Office</p>
+		<div class="bannerBottom">
+				<h1 class="toUpper bold">Need help? Feel free to contact us at <span style="white-space: nowrap;">416-464-6573</span></h1>
+			</div>
 
-			<div class="blockImg">
+	<div class="row eqHeight footerRow">
+
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 footerCols">
+			
+						<h3 class="toUpper bold">About Us</h3>
+						<p><img src="{{ site.baseurl }}/images/fivestarlogo.svg" height="60px"></p>						
+						<p>a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+						<p>'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+						
+					</div>
+
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 footerCols">
+			<h3 class="toUpper bold">Our Office</h3>
+
+			<div class="footerImg">
 				<img src="{{ site.baseurl }}/images/brampton.jpg">
 			</div>
 
-			<p>2 County Court Blvd., Suite 400</p>
-			<p>Brampton, ON</p>
-			<p>L6W 3W8, Canada</p>
+			<p><span>2 County Court Blvd., Suite 400</span><span>Brampton, ON</span><span>L6W 3W8, Canada</span><span>+1-416-464-6573</span></p>
 
 		</div>
 
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
+
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 footerCols">
+				<h3 class="toUpper bold">Our Office</h3>
+	
+				<div class="footerImg">
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
+	
+				<p><span>2 County Court Blvd., Suite 400</span><span>Brampton, ON</span><span>L6W 3W8, Canada</span><span>+1-416-464-6573</span></p>
+	
+			</div>
+
+		<!-- <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 footerCols">
 			<p>Toronto - Yonge & Bloor</p>
 
 			<div class="blockImg">
@@ -31,7 +53,7 @@
 			<p>M4W 3E2, Canada</p>
 		</div>
 
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 footerCols">
 			<p>Toronto - Yonge & Sheppard</p>
 
 			<div class="blockImg">
@@ -41,19 +63,50 @@
 			<p>4711 Yonge Street, 10th Floor</p>
 			<p>Toronto, ON</p>
 			<p>M2N 6K8, Canada</p>
-		</div>
+		</div> -->
+	</div>
 
-		<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 footerText">
-			<p>Mississauga Office</p>
-
-			<div class="blockImg">
-				<img src="{{ site.baseurl }}/images/mississauga.jpg">
+	<div class="row eqHeight copyrightRow">
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
+				<p>© 2017 Fivestar Media Inc. | Sitemap</p>
 			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 copyright">
+			<ul>
+				<li>
+						<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+				</li>
+				<li>
+						<a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+						
+				</li>
 
-			<p>5925 Airport Road, Suite 200</p>
-			<p>Mississauga, ON</p>
-			<p>L4V 1W1, Canada</p>
-		</div>
+				<li>
+						<a href="#"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+						
+				</li>
+
+
+				<li>
+						<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+						
+				</li>
+
+
+				<li>
+						<a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
+						
+						
+					</li>
+
+				<li>
+						<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					</li>
+
+
+
+
+			</ul>
+			</div>
 	</div>
 </div>
 
