--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,9 @@
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/hover.css">
 	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 	<link rel="icon" href="{{ site.baseurl }}/images/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	{% include analytics.html %}
+
 </head>
 
 {{ content }}
