--- a/css/styles.scss
+++ b/css/styles.scss
@@ -113,7 +113,7 @@ body {
     background: #4286f4;
     text-align: center;
     color:white;
-    padding: 4.5vw 2vw;
+    padding: 4.5vw 1.825vw;
 }
 
 .bannerBottom {
@@ -127,7 +127,7 @@ body {
         background: #4286f4;
         text-align: center;
         color:white;
-        padding: 4.5vw 2vw;
+        padding: 4.5vw 1.825vw;
     }
 
 h1 {
@@ -158,7 +158,7 @@ h3 {
 }
 
 .serviceHeading {
-    padding: 4.5vw 2vw;
+    padding: 4.5vw 1.825vw;
     text-align: center;
 }
 
@@ -184,7 +184,7 @@ h3 {
     // margin:2.5vw 0;
     // padding-top:40px;
 
-    padding: 4.5vw 2vw;
+    padding: 4.5vw 1.825vw;
     color: #656666;
 }
 
@@ -197,9 +197,13 @@ h3 {
     // display:block;
 }
 
-.serviceCols:hover a {
-    color: #656666;
-    // display:block;
+// .serviceCols:hover a {
+//     color: #656666;
+//     // display:block;
+// }
+
+.serviceCols a:hover {
+    text-decoration: none;
 }
 
 
@@ -213,12 +217,24 @@ h3 {
     // background-color: red;
 }
 
-// .serviceIcon img {
-//     display: block;
-//     margin: 0 auto;
-//     height: auto;
-//     // width: 100vw;
-// }
+.footerImg {
+    width:100%;
+    // background-color: red;
+}
+
+.footerImg img {
+    display: block;
+    margin: 0;
+    height: auto;
+    width: 100%;
+}
+
+.serviceIcon img {
+    display: block;
+    margin: 0;
+    height: auto;
+    width: 100%;
+}
 
 
 
@@ -258,9 +274,7 @@ h3 {
     text-decoration: none;
     margin-bottom:0;
 }
-.serviceCols a:hover {
-    text-decoration: none;
-}
+
 
 // .serviceLink:hover {
 //     text-decoration: none;
@@ -300,7 +314,8 @@ h3 {
 /* Menu */
 
 nav {
-	position:fixed;
+cursor:default;
+    position:fixed;
 	width:100%;
 	top:0;
 	right:0;
@@ -322,8 +337,7 @@ nav ul {
 	/* cursor:default; */
     padding-top:18px;
     /* margin-left:100px; */
-	margin-right:2vw;
-
+	margin-right:1.825vw;
 }
 
 nav ul li a {
@@ -343,7 +357,7 @@ color:white;
 
 nav ul li {
 	font-size: 1.6rem;
-	margin-right:1.825vw;
+	margin-left:1.825vw;
 	display:inline-block;
 	color:white;
 	position:relative;
@@ -409,7 +423,7 @@ nav ul li ul li:last-child{
 
 nav img {
 	margin-top:20px;
-	margin-left:2vw;
+	margin-left:1.825vw;
 	// margin-left:10px;
 }
 
@@ -428,7 +442,7 @@ nav img {
 .newNav ul {    
 	font-weight: lighter;
 	text-align: right;
-	margin-right:2vw;
+	margin-right:1.825vw;
 	display:inline-block;
 	position:absolute;
 	right:0;
@@ -448,7 +462,7 @@ nav img {
 }
 
 .newNav ul li {
-	margin-right:1.825vw;
+	margin-left:1.825vw;
 	display:inline-block;
 	position:relative;
 	font-size: 1.6rem;
@@ -500,7 +514,7 @@ nav img {
 
 .newNav img {
 	margin-top:5px;
-	margin-left:2vw;
+	margin-left:1.825vw;
 }
 
 .slideNewNavDown {
@@ -610,28 +624,113 @@ cursor:default;
 
 
 
+.footerRow {
+    // background-color:rgb(240,245,255); 
+    background-color:#f1f1f1;
+}
+
+.copyrightRow {
+
+    background-color:#f1f1f1;
+
+}
 
 
-.footerText {
-    padding:40px;
-    background-color:rgb(240,245,255); 
-    font-size: 1.2em;
+.footerCols {
+    text-align: left;   
+    padding: 4.5vw 1.825vw;
+    color: #656666;
+    // background-color:red; 
+
+}
+
+.copyright {
+    padding: 4.5vw 1.825vw;
+    // display: block;
+    // vertical-align: middle;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-top: 1px solid white;
+}
+
+.copyright p {
+    font-size: 3.2vw;
+    margin:0;
     text-align: center;
 }
 
-.blockImg {
-    /* background-color: grey; */
-    margin:20px 0 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* text-align: center; */
+.copyright ul li a {
+    color: #656666;
+    -webkit-transition: color 0.5s; /* Safari */
+    transition: color 0.5s;
 }
 
-.blockImg img{
-    height:auto;
-    width:75%;
+.copyright ul li a:hover {
+    color: #4286f4;
 }
+
+.copyright i {
+    font-size: 6.5vw;
+}
+
+.copyright ul {
+    cursor: default;
+    display:inline-block;
+    list-style: none;
+    text-align: center;
+    margin:0;
+    padding:0;
+}
+
+.copyright ul li{
+    display:inline-block;
+    
+    // margin-left:10px;
+
+    margin-left:4.5vw;
+}
+
+.copyright ul li:first-child{
+    margin-left:0;
+}
+
+
+.footerCols:last-child {
+    padding-bottom:9vw;
+}
+
+.footerCols h3 {
+    padding: 4.5vw 0;
+}
+
+.footerCols p {
+font-size: 3.5vw;
+}
+
+.footerCols p span:first-child {
+    padding-top:4.5vw;
+}
+
+.footerCols p span {
+    display:block;
+}
+
+// .blockImg {
+//     /* background-color: grey; */
+//     // margin:20px 0 20px 0;
+//     display: block;
+//     // align-items: center;
+//     // justify-content: center;
+//     /* text-align: center; */
+//     max-width:100%;
+//     height:auto;
+// }
+
+// .blockImg img{
+//     height:auto;
+//     // width:75%;
+// }
 
 .footerBanner {
     display:flex;
@@ -819,16 +918,56 @@ color:grey;
 
 .eqHeight {
     // display:flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
+
 .serviceCols {
-    width: 31vw;
+    width: 30.9vw;
     padding: 3.075vw 0vw;
 }
 
 .serviceCols:last-child {
     padding-bottom:6.15vw;
+}
+
+.footerCols {
+    // width: 29.947vw;
+    width: 30.9vw;
+    padding: 3.075vw 0vw;
+}
+
+.footerCols:last-child {
+    padding-bottom:6.15vw;
+}
+
+.copyright {
+    align-items: row;
+    padding: 1vw 1.825vw;;
+}
+
+.copyright ul {
+    text-align: right;
+}
+
+.copyright ul li{
+    display:inline-block;
+    
+    margin-left:1.5vw;
+}
+
+.copyright p {
+    font-size: 1.2vw;
+    margin:0;
+    text-align: left;
+}
+
+.copyright i {
+    font-size: 2.5vw;
+}
+
+.copyright:last-child {
+    text-align: right;
 }
 
 .serviceText {
@@ -866,6 +1005,25 @@ h3 {
     margin:0;
     line-height: 3vw;
 }
+
+.footerCols h3 {
+    font-size:1.875vw;
+    // padding:0;
+    padding: 2.25vw 0;
+    // line-height: 3.375vw;
+}
+
+.footerCols p span:first-child {
+    padding-top:2.25vw;
+}
+
+.footerCols p {
+    font-size: 1.2vw;
+    }
+
+
+
+
 
 
 
