--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -39,7 +39,7 @@
 
             <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
-            <li><a class="hvr-underline-from-none">416-464-6573</a></li>
+            <li><a class="telNumber">416-464-6573</a></li>
         </div>
 
         <div class="cross">
@@ -75,7 +75,7 @@
 
             <!-- <li><a href="{{ site.baseurl }}/blog/" class="hvr-underline-from-left">Blog</a></li> -->
             <li><a href="{{ site.baseurl }}/contact/" class="hvr-underline-from-left">Contact</a></li>
-            <li><a class="hvr-underline-from-none">416-464-6573</a></li>
+            <li><a class="telNumber">416-464-6573</a></li>
         </div>
 
         <div class="cross">
