--- a/css/styles.scss
+++ b/css/styles.scss
@@ -217,6 +217,12 @@ h3 {
     // background-color: red;
 }
 
+.telNumber {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .footerImg {
     width:100%;
     // background-color:red;
