--- a/css/styles.scss
+++ b/css/styles.scss
@@ -221,6 +221,7 @@ h3 {
     position: relative;
     display: inline-block;
     vertical-align: middle;
+    cursor:default;
 }
 
 .footerImg {
@@ -562,38 +563,38 @@ nav img {
 
 
 
-.hvr-underline-from-none {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  position: relative;
-  overflow: hidden;
-cursor:default;
+// .hvr-underline-from-none {
+//   display: inline-block;
+//   vertical-align: middle;
+//   -webkit-transform: perspective(1px) translateZ(0);
+//   transform: perspective(1px) translateZ(0);
+//   box-shadow: 0 0 1px transparent;
+//   position: relative;
+//   overflow: hidden;
+// cursor:default;
 
-}
+// }
 
-.hvr-underline-from-none:before {
-  cursor:default;
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 100%;
-  bottom: 0;
-  /*background: #2098D1;*/
-  /*height: 4px;*/
-  -webkit-transition-property: right;
-  transition-property: right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.hvr-underline-from-none:hover:before, .hvr-underline-from-none:focus:before, .hvr-underline-from-none:active:before {
-  right: 0;
-}
+// .hvr-underline-from-none:before {
+//   cursor:default;
+//   content: "";
+//   position: absolute;
+//   z-index: -1;
+//   left: 0;
+//   right: 100%;
+//   bottom: 0;
+//   /*background: #2098D1;*/
+//   /*height: 4px;*/
+//   -webkit-transition-property: right;
+//   transition-property: right;
+//   -webkit-transition-duration: 0.3s;
+//   transition-duration: 0.3s;
+//   -webkit-transition-timing-function: ease-out;
+//   transition-timing-function: ease-out;
+// }
+// .hvr-underline-from-none:hover:before, .hvr-underline-from-none:focus:before, .hvr-underline-from-none:active:before {
+//   right: 0;
+// }
 
 
 
